Fixed overflowing problem on the timeline

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,5 +26,5 @@ body {
     color: var(--clr-neutral-900);
     font-family: "Montserrat", sans-serif;
 
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
