--- a/scss/story-section.scss
+++ b/scss/story-section.scss
@@ -1,12 +1,17 @@
 .story {
+
+    overflow-x: hidden;
+
     &__timeline {
         display: flex;
         // the width of the timeline is set through javascript because it depends on the number of points in the timeline
         // width: calc(x * 100%);
 
         transition: transform 300ms ease-in-out;
-    }
 
+        // overflow-x: scroll;
+    }
+    
     &__timeline-block {
         width: 100%;
         padding: 0 1rem;
